[package]
name = "test_py_hashlib"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpython = "0.5"
crypto2 = "0.1"
openssl = "0.10"

[features]
default = [
    "cpython/python3-sys",
]